--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
   "name": "pagina-web-dinamica",
   "version": "1.0.0",
-  "description": "",
-  "main": "script.js",
+  "description": "Una aplicación web simple para leer y escribir un dato en SQLite",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
 
   },
   "keywords": [],
-  "author": "",
+  "author": "Percival Amezola",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "sqlite3": "^5.1.6"
+  },
+  "engines": {
+    "node": "18.x"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Percival-A/pagina-web-dinamica.git"
   }
 }
